--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -1,7 +1,7 @@
 // Config file using emilk/configuru CFG
 
-sceneInput: {
-	path:				"testModel/Table_room/scene.gltf"
+game: {
+	path:				"testModel/Table_room/gameConfig.cfg"
 }
 
 graphicsSettings: {
