--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
@@ -20,19 +20,31 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\DiTO\dito.cpp" />
+    <ClCompile Include="src\ComponentBaseClass.cpp" />
+    <ClCompile Include="src\ComponentRawBaseClass.cpp" />
+    <ClCompile Include="src\ComponentSparseBaseClass.cpp" />
     <ClCompile Include="src\Cuboid.cpp" />
     <ClCompile Include="src\Drawer.cpp" />
+    <ClCompile Include="src\ECSwrapper.cpp" />
+    <ClCompile Include="src\EnginesExportedFunctions.cpp" />
+    <ClCompile Include="src\EntitiesHandler.cpp" />
     <ClCompile Include="src\FrustumCulling.cpp" />
+    <ClCompile Include="src\GameImport.cpp" />
     <ClCompile Include="src\MipmapsGenerator.cpp" />
+    <ClCompile Include="src\ModelDrawComp.cpp" />
+    <ClCompile Include="src\ModelDrawCompEntity.cpp" />
+    <ClCompile Include="src\NodeGlobalMatrixComp.cpp" />
+    <ClCompile Include="src\NodeGlobalMatrixCompEntity.cpp" />
     <ClCompile Include="src\OBB.cpp" />
     <ClCompile Include="src\Plane.cpp" />
+    <ClCompile Include="src\PositionComp.cpp" />
+    <ClCompile Include="src\PositionCompEntity.cpp" />
     <ClCompile Include="src\ViewportFrustum.cpp" />
     <ClCompile Include="src\InputManager.cpp" />
     <ClCompile Include="src\CameraBaseClass.cpp" />
     <ClCompile Include="src\MeshesOfNodes.cpp" />
     <ClCompile Include="src\MaterialsOfPrimitives.cpp" />
     <ClCompile Include="src\ShadersSetsFamiliesCache.cpp" />
-    <ClCompile Include="src\NodesOfScene.cpp" />
     <ClCompile Include="src\PipelinesFactory.cpp" />
     <ClCompile Include="src\PrimitivesOfMeshes.cpp" />
     <ClCompile Include="src\NaiveCamera.cpp" />
@@ -49,20 +61,34 @@
     <ClInclude Include="..\DiTO\dito.h" />
     <ClInclude Include="..\tinygltf\stb_image.h" />
     <ClInclude Include="..\tinygltf\tiny_gltf.h" />
+    <ClInclude Include="include\ComponentBaseClass.h" />
+    <ClInclude Include="include\ComponentRawBaseClass.h" />
+    <ClInclude Include="include\ComponentsIDsEnum.h" />
+    <ClInclude Include="include\ComponentSparseBaseClass.h" />
     <ClInclude Include="include\Cuboid.h" />
     <ClInclude Include="include\Drawer.h" />
+    <ClInclude Include="include\ECStypes.h" />
+    <ClInclude Include="include\ECSwrapper.h" />
+    <ClInclude Include="include\EnginesExportedFunctions.h" />
+    <ClInclude Include="include\EntitiesHandler.h" />
     <ClInclude Include="include\FrustumCulling.h" />
     <ClInclude Include="include\const_maps.h" />
+    <ClInclude Include="include\GameImport.h" />
     <ClInclude Include="include\MipmapsGenerator.h" />
+    <ClInclude Include="include\ModelDrawComp.h" />
+    <ClInclude Include="include\ModelDrawCompEntity.h" />
+    <ClInclude Include="include\NodeGlobalMatrixComp.h" />
+    <ClInclude Include="include\NodeGlobalMatrixCompEntity.h" />
     <ClInclude Include="include\OBB.h" />
     <ClInclude Include="include\Plane.h" />
+    <ClInclude Include="include\PositionComp.h" />
+    <ClInclude Include="include\PositionCompEntity.h" />
     <ClInclude Include="include\ViewportFrustum.h" />
     <ClInclude Include="include\glTFenum.h" />
     <ClInclude Include="include\hash_combine.h" />
     <ClInclude Include="include\MaterialsOfPrimitives.h" />
     <ClInclude Include="include\ShadersSetsFamiliesCache.h" />
     <ClInclude Include="include\MeshesOfNodes.h" />
-    <ClInclude Include="include\NodesOfScene.h" />
     <ClInclude Include="include\PipelinesFactory.h" />
     <ClInclude Include="include\PrimitivesOfMeshes.h" />
     <ClInclude Include="include\CameraBaseClass.h" />
