--- a/inMyRoom_vulkan/CMakeLists.txt
+++ b/inMyRoom_vulkan/CMakeLists.txt
@@ -52,19 +52,34 @@ SET(SRC #etc-.h
         "${inMyRoom_vulkan_SOURCE_DIR}/include/glTFenum.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/hash_combine.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/const_maps.h"
-        #includes-.h geometry
-        "${inMyRoom_vulkan_SOURCE_DIR}/include/ViewportFrustum.h"
-        "${inMyRoom_vulkan_SOURCE_DIR}/include/FrustumCulling.h"
-        "${inMyRoom_vulkan_SOURCE_DIR}/include/Plane.h"
-        "${inMyRoom_vulkan_SOURCE_DIR}/include/Cuboid.h"
-        "${inMyRoom_vulkan_SOURCE_DIR}/include/OBB.h"
-        #includes-.h of meshes
-        "${inMyRoom_vulkan_SOURCE_DIR}/include/MeshesOfNodes.h"
-        "${inMyRoom_vulkan_SOURCE_DIR}/include/MaterialsOfPrimitives.h"
-        "${inMyRoom_vulkan_SOURCE_DIR}/include/ImagesAboutOfTextures.h"
-        "${inMyRoom_vulkan_SOURCE_DIR}/include/TexturesOfMaterials.h"
-        "${inMyRoom_vulkan_SOURCE_DIR}/include/PrimitivesOfMeshes.h"
-        #includes-.h
+        #include-.h ECS
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/ModelDrawCompEntity.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/NodeGlobalMatrixCompEntity.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/PositionCompEntity.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/ModelDrawComp.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/NodeGlobalMatrixComp.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/PositionComp.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/ComponentBaseClass.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/ComponentRawBaseClass.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/ComponentSparseBaseClass.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/ComponentsIDsEnum.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/ECStypes.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/ECSwrapper.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/EnginesExportedFunctions.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/EntitiesHandler.h"
+        #include-.h geometry
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/ViewportFrustum.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/FrustumCulling.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/Plane.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/Cuboid.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/OBB.h"
+        #include-.h meshes
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Meshes/MeshesOfNodes.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Meshes/MaterialsOfPrimitives.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Meshes/ImagesAboutOfTextures.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Meshes/TexturesOfMaterials.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Meshes/PrimitivesOfMeshes.h"
+        #include-.h
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Engine.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/VulkanInit.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics.h"
@@ -81,18 +96,31 @@ SET(SRC #etc-.h
         "${inMyRoom_vulkan_SOURCE_DIR}/src/main.cpp"
         #etc-.cpp
         "${inMyRoom_vulkan_SOURCE_DIR}/../DiTO/dito.cpp"
-         #includes-.h geometry
-        "${inMyRoom_vulkan_SOURCE_DIR}/src/ViewportFrustum.cpp"
-        "${inMyRoom_vulkan_SOURCE_DIR}/src/FrustumCulling.cpp"
-        "${inMyRoom_vulkan_SOURCE_DIR}/src/Plane.cpp"
-        "${inMyRoom_vulkan_SOURCE_DIR}/src/Cuboid.cpp"
-        "${inMyRoom_vulkan_SOURCE_DIR}/src/OBB.cpp"
-        #source-.cpp of meshes
-        "${inMyRoom_vulkan_SOURCE_DIR}/src/MeshesOfNodes.cpp"
-        "${inMyRoom_vulkan_SOURCE_DIR}/src/MaterialsOfPrimitives.cpp"
-        "${inMyRoom_vulkan_SOURCE_DIR}/src/ImagesAboutOfTextures.cpp"
-        "${inMyRoom_vulkan_SOURCE_DIR}/src/TexturesOfMaterials.cpp"
-        "${inMyRoom_vulkan_SOURCE_DIR}/src/PrimitivesOfMeshes.cpp"
+        #source-.cpp ECS
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/ModelDrawCompEntity.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/NodeGlobalMatrixCompEntity.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/PositionCompEntity.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/ModelDrawComp.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/NodeGlobalMatrixComp.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/PositionComp.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/ComponentBaseClass.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/ComponentRawBaseClass.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/ComponentSparseBaseClass.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/ECSwrapper.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/EnginesExportedFunctions.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/EntitiesHandler.cpp"
+        #source-.cpp geometry
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/ViewportFrustum.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/FrustumCulling.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/Plane.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/Cuboid.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/OBB.cpp"
+        #source-.cpp meshes
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Meshes/MeshesOfNodes.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Meshes/MaterialsOfPrimitives.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Meshes/ImagesAboutOfTextures.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Meshes/TexturesOfMaterials.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Meshes/PrimitivesOfMeshes.cpp"
         #source-.cpp
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Engine.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/VulkanInit.cpp"
