--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
@@ -20,36 +20,36 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\DiTO\dito.cpp" />
-    <ClCompile Include="src\ComponentBaseClass.cpp" />
-    <ClCompile Include="src\ComponentRawBaseClass.cpp" />
-    <ClCompile Include="src\ComponentSparseBaseClass.cpp" />
-    <ClCompile Include="src\Cuboid.cpp" />
     <ClCompile Include="src\Drawer.cpp" />
-    <ClCompile Include="src\ECSwrapper.cpp" />
-    <ClCompile Include="src\EnginesExportedFunctions.cpp" />
-    <ClCompile Include="src\EntitiesHandler.cpp" />
-    <ClCompile Include="src\FrustumCulling.cpp" />
+    <ClCompile Include="src\ECS\ComponentBaseClass.cpp" />
+    <ClCompile Include="src\ECS\ComponentRawBaseClass.cpp" />
+    <ClCompile Include="src\ECS\ComponentSparseBaseClass.cpp" />
+    <ClCompile Include="src\ECS\ECSwrapper.cpp" />
+    <ClCompile Include="src\ECS\EnginesExportedFunctions.cpp" />
+    <ClCompile Include="src\ECS\EntitiesHandler.cpp" />
+    <ClCompile Include="src\ECS\GeneralCompEntities\ModelDrawCompEntity.cpp" />
+    <ClCompile Include="src\ECS\GeneralCompEntities\NodeGlobalMatrixCompEntity.cpp" />
+    <ClCompile Include="src\ECS\GeneralCompEntities\PositionCompEntity.cpp" />
+    <ClCompile Include="src\ECS\GeneralComponents\ModelDrawComp.cpp" />
+    <ClCompile Include="src\ECS\GeneralComponents\NodeGlobalMatrixComp.cpp" />
+    <ClCompile Include="src\ECS\GeneralComponents\PositionComp.cpp" />
     <ClCompile Include="src\GameImport.cpp" />
+    <ClCompile Include="src\Geometry\Cuboid.cpp" />
+    <ClCompile Include="src\Geometry\FrustumCulling.cpp" />
+    <ClCompile Include="src\Geometry\OBB.cpp" />
+    <ClCompile Include="src\Geometry\Plane.cpp" />
+    <ClCompile Include="src\Geometry\ViewportFrustum.cpp" />
+    <ClCompile Include="src\Meshes\ImagesAboutOfTextures.cpp" />
+    <ClCompile Include="src\Meshes\MaterialsOfPrimitives.cpp" />
+    <ClCompile Include="src\Meshes\MeshesOfNodes.cpp" />
+    <ClCompile Include="src\Meshes\PrimitivesOfMeshes.cpp" />
+    <ClCompile Include="src\Meshes\TexturesOfMaterials.cpp" />
     <ClCompile Include="src\MipmapsGenerator.cpp" />
-    <ClCompile Include="src\ModelDrawComp.cpp" />
-    <ClCompile Include="src\ModelDrawCompEntity.cpp" />
-    <ClCompile Include="src\NodeGlobalMatrixComp.cpp" />
-    <ClCompile Include="src\NodeGlobalMatrixCompEntity.cpp" />
-    <ClCompile Include="src\OBB.cpp" />
-    <ClCompile Include="src\Plane.cpp" />
-    <ClCompile Include="src\PositionComp.cpp" />
-    <ClCompile Include="src\PositionCompEntity.cpp" />
-    <ClCompile Include="src\ViewportFrustum.cpp" />
     <ClCompile Include="src\InputManager.cpp" />
     <ClCompile Include="src\CameraBaseClass.cpp" />
-    <ClCompile Include="src\MeshesOfNodes.cpp" />
-    <ClCompile Include="src\MaterialsOfPrimitives.cpp" />
     <ClCompile Include="src\ShadersSetsFamiliesCache.cpp" />
     <ClCompile Include="src\PipelinesFactory.cpp" />
-    <ClCompile Include="src\PrimitivesOfMeshes.cpp" />
     <ClCompile Include="src\NaiveCamera.cpp" />
-    <ClCompile Include="src\TexturesOfMaterials.cpp" />
-    <ClCompile Include="src\ImagesAboutOfTextures.cpp" />
     <ClCompile Include="src\VulkanInit.cpp" />
     <ClCompile Include="src\WindowWithAsyncInput.cpp" />
     <ClCompile Include="src\Engine.cpp" />
@@ -61,40 +61,40 @@
     <ClInclude Include="..\DiTO\dito.h" />
     <ClInclude Include="..\tinygltf\stb_image.h" />
     <ClInclude Include="..\tinygltf\tiny_gltf.h" />
-    <ClInclude Include="include\ComponentBaseClass.h" />
-    <ClInclude Include="include\ComponentRawBaseClass.h" />
-    <ClInclude Include="include\ComponentsIDsEnum.h" />
-    <ClInclude Include="include\ComponentSparseBaseClass.h" />
-    <ClInclude Include="include\Cuboid.h" />
     <ClInclude Include="include\Drawer.h" />
-    <ClInclude Include="include\ECStypes.h" />
-    <ClInclude Include="include\ECSwrapper.h" />
-    <ClInclude Include="include\EnginesExportedFunctions.h" />
-    <ClInclude Include="include\EntitiesHandler.h" />
-    <ClInclude Include="include\FrustumCulling.h" />
+    <ClInclude Include="include\ECS\ComponentBaseClass.h" />
+    <ClInclude Include="include\ECS\ComponentRawBaseClass.h" />
+    <ClInclude Include="include\ECS\ComponentsIDsEnum.h" />
+    <ClInclude Include="include\ECS\ComponentSparseBaseClass.h" />
+    <ClInclude Include="include\ECS\ECStypes.h" />
+    <ClInclude Include="include\ECS\ECSwrapper.h" />
+    <ClInclude Include="include\ECS\EnginesExportedFunctions.h" />
+    <ClInclude Include="include\ECS\EntitiesHandler.h" />
+    <ClInclude Include="include\ECS\GeneralCompEntities\ModelDrawCompEntity.h" />
+    <ClInclude Include="include\ECS\GeneralCompEntities\NodeGlobalMatrixCompEntity.h" />
+    <ClInclude Include="include\ECS\GeneralCompEntities\PositionCompEntity.h" />
+    <ClInclude Include="include\ECS\GeneralComponents\ModelDrawComp.h" />
+    <ClInclude Include="include\ECS\GeneralComponents\NodeGlobalMatrixComp.h" />
+    <ClInclude Include="include\ECS\GeneralComponents\PositionComp.h" />
     <ClInclude Include="include\const_maps.h" />
     <ClInclude Include="include\GameImport.h" />
+    <ClInclude Include="include\Geometry\Cuboid.h" />
+    <ClInclude Include="include\Geometry\FrustumCulling.h" />
+    <ClInclude Include="include\Geometry\OBB.h" />
+    <ClInclude Include="include\Geometry\Plane.h" />
+    <ClInclude Include="include\Geometry\ViewportFrustum.h" />
+    <ClInclude Include="include\Meshes\ImagesAboutOfTextures.h" />
+    <ClInclude Include="include\Meshes\MaterialsOfPrimitives.h" />
+    <ClInclude Include="include\Meshes\MeshesOfNodes.h" />
+    <ClInclude Include="include\Meshes\PrimitivesOfMeshes.h" />
+    <ClInclude Include="include\Meshes\TexturesOfMaterials.h" />
     <ClInclude Include="include\MipmapsGenerator.h" />
-    <ClInclude Include="include\ModelDrawComp.h" />
-    <ClInclude Include="include\ModelDrawCompEntity.h" />
-    <ClInclude Include="include\NodeGlobalMatrixComp.h" />
-    <ClInclude Include="include\NodeGlobalMatrixCompEntity.h" />
-    <ClInclude Include="include\OBB.h" />
-    <ClInclude Include="include\Plane.h" />
-    <ClInclude Include="include\PositionComp.h" />
-    <ClInclude Include="include\PositionCompEntity.h" />
-    <ClInclude Include="include\ViewportFrustum.h" />
     <ClInclude Include="include\glTFenum.h" />
     <ClInclude Include="include\hash_combine.h" />
-    <ClInclude Include="include\MaterialsOfPrimitives.h" />
     <ClInclude Include="include\ShadersSetsFamiliesCache.h" />
-    <ClInclude Include="include\MeshesOfNodes.h" />
     <ClInclude Include="include\PipelinesFactory.h" />
-    <ClInclude Include="include\PrimitivesOfMeshes.h" />
     <ClInclude Include="include\CameraBaseClass.h" />
     <ClInclude Include="include\NaiveCamera.h" />
-    <ClInclude Include="include\TexturesOfMaterials.h" />
-    <ClInclude Include="include\ImagesAboutOfTextures.h" />
     <ClInclude Include="include\VulkanInit.h" />
     <ClInclude Include="include\WindowWithAsyncInput.h" />
     <ClInclude Include="include\Engine.h" />
