--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
@@ -25,7 +25,7 @@
     <ClCompile Include="src\ECS\ComponentRawBaseClass.cpp" />
     <ClCompile Include="src\ECS\ComponentSparseBaseClass.cpp" />
     <ClCompile Include="src\ECS\ECSwrapper.cpp" />
-    <ClCompile Include="src\ECS\EnginesExportedFunctions.cpp" />
+    <ClCompile Include="src\ECS\ExportedFunctions.cpp" />
     <ClCompile Include="src\ECS\EntitiesHandler.cpp" />
     <ClCompile Include="src\ECS\GeneralCompEntities\ModelDrawCompEntity.cpp" />
     <ClCompile Include="src\ECS\GeneralCompEntities\NodeGlobalMatrixCompEntity.cpp" />
@@ -33,7 +33,8 @@
     <ClCompile Include="src\ECS\GeneralComponents\ModelDrawComp.cpp" />
     <ClCompile Include="src\ECS\GeneralComponents\NodeGlobalMatrixComp.cpp" />
     <ClCompile Include="src\ECS\GeneralComponents\PositionComp.cpp" />
-    <ClCompile Include="src\GameImport.cpp" />
+    <ClCompile Include="src\ExportedFunctionsConstructor.cpp" />
+    <ClCompile Include="src\GameImporter.cpp" />
     <ClCompile Include="src\Geometry\Cuboid.cpp" />
     <ClCompile Include="src\Geometry\FrustumCulling.cpp" />
     <ClCompile Include="src\Geometry\OBB.cpp" />
@@ -68,7 +69,7 @@
     <ClInclude Include="include\ECS\ComponentSparseBaseClass.h" />
     <ClInclude Include="include\ECS\ECStypes.h" />
     <ClInclude Include="include\ECS\ECSwrapper.h" />
-    <ClInclude Include="include\ECS\EnginesExportedFunctions.h" />
+    <ClInclude Include="include\ECS\ExportedFunctions.h" />
     <ClInclude Include="include\ECS\EntitiesHandler.h" />
     <ClInclude Include="include\ECS\GeneralCompEntities\ModelDrawCompEntity.h" />
     <ClInclude Include="include\ECS\GeneralCompEntities\NodeGlobalMatrixCompEntity.h" />
@@ -77,7 +78,8 @@
     <ClInclude Include="include\ECS\GeneralComponents\NodeGlobalMatrixComp.h" />
     <ClInclude Include="include\ECS\GeneralComponents\PositionComp.h" />
     <ClInclude Include="include\const_maps.h" />
-    <ClInclude Include="include\GameImport.h" />
+    <ClInclude Include="include\ExportedFunctionsConstructor.h" />
+    <ClInclude Include="include\GameImporter.h" />
     <ClInclude Include="include\Geometry\Cuboid.h" />
     <ClInclude Include="include\Geometry\FrustumCulling.h" />
     <ClInclude Include="include\Geometry\OBB.h" />
